QA_Project/force-app/main/default/objects/Course_Invoice__c/Course_Invoice__c.object-meta.xml
<CustomObject>
    <label>Course Invoice</label>
    <nameField>
        <label>Course Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>