QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/After_Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>After_Tax_Total__c</fullName>
    <formula>Total__c -  ((Tax_Retention__c/100) * Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>