QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Course Invoices</relationshipLabel>
    <relationshipName>Course_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>