QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/Service_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Total__c</fullName>
    <label>Service Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>