QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <label>Sub Total</label>
    <summarizedField>Invoice_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Invoice_Item__c.Invoice_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>