QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>