QA_Project/force-app/main/default/objects/Course_Invoice__c/fields/Tax_Retention__c.field-meta.xml
<CustomField>
    <fullName>Tax_Retention__c</fullName>
    <formula>Course_Name__r.Instructor_Information__r.Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>