QA_Project/force-app/main/default/objects/Course_Invoice__c/validationRules/Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Date</fullName>
    <active>true</active>
    <description>Stops future dates being added incorrectly</description>
    <errorConditionFormula>OR( (Submitted_Date__c &gt; TODAY()) , (Paid_Date__c ) &gt;  TODAY())</errorConditionFormula>
    <errorMessage>Cannot enter a future date for Submitted Date or Paid Date</errorMessage>
</ValidationRule>