QA_Project/force-app/main/default/objects/Course_Invoice__c/validationRules/Status_to_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_to_paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Paid_Date__c ) , (TEXT(Status__c)=&quot;Paid&quot; ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please enter a Paid date to change the status to paid</errorMessage>
</ValidationRule>