QA_Project/force-app/main/default/objects/Course_Invoice__c/validationRules/Status_to_submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_to_submitted</fullName>
    <active>true</active>
    <description>Doesn&apos;t allow the status to be turned to submitted unless they have provided a submitted date</description>
    <errorConditionFormula>AND(ISBLANK( Submitted_Date__c ),(TEXT(Status__c) = &quot;Submitted&quot;))</errorConditionFormula>
    <errorMessage>You cannot change the status to submitted without providing a submitted date</errorMessage>
</ValidationRule>